syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";
option java_outer_classname = "CheckoutProto";

service CheckoutService {
  rpc Checkout (CheckoutRequest) returns (CheckoutResponse);
  rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

message CheckoutRequest {
  string customerId = 1;         // <-- UUID as STRING
  string cartId = 2;         // <-- UUID as STRING
}

message CheckoutResponse {
  string orderId = 1;        // <-- UUID as STRING
  string status = 2;
}

// --- New messages for payment processing ---
message ProcessPaymentRequest {
  string orderId = 1;    // UUID as STRING
}

message ProcessPaymentResponse {
  string orderId = 1;    // UUID as STRING
  string status = 2;     // e.g., "PAID"
}