syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";
option java_outer_classname = "BillingProto";

service BillingService {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

message CreateRequest {
  string customerId = 1;         // <-- UUID as STRING
  string cartId = 2;         // <-- UUID as STRING
}

message CreateResponse {
  string orderId = 1;        // <-- UUID as STRING
  string status = 2;
}

// --- New messages for payment processing ---
message ProcessPaymentRequest {
  string orderId = 1;    // UUID as STRING
}

message ProcessPaymentResponse {
  string orderId = 1;    // UUID as STRING
  string status = 2;     // e.g., "PAID"
}